# mypackage

./: AUTHORS  ChangeLog  setup.cfg  setup.py
mypackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json
mypackage/cmd/: main.py
samplepbr.egg-info/: PKG-INFO  SOURCES.txt
