[metadata]
name = mypackage
author = Vitthal
author-email = vitthal.padwal@msystechnologies.com
summary = Python Build Reasonableness
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://docs.openstack.org/pbr/latest/
project_urls =
    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = https://docs.openstack.org/pbr/
    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
requires-python = >=2.6
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5

[files]
packages =
    mypackage

[global]
setup-hooks =
    mypackage.hooks.setup_hook

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
   setup.py
   mypackage/tests/
api_doc_dir = reference/api

[entry_points]
distutils.setup_keywords =
    mypackage = mypackage.core:pbr
egg_info.writers =
    mypackage.json = mypackage.pbr_json:write_pbr_json
console_scripts =
    mypackage = mypackage.cmd.main:main

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
